2008-06-28  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/except.hxx, include/pqxx/result.hxx, src/connection_base.cxx,
 src/cursor.cxx, src/except.cxx, src/largeobject.cxx, src/result.cxx,
 src/robusttransaction.cxx, src/tablereader.cxx, src/transaction_base.cxx,
 src/util.cxx:
  - Throw pqxx_exception-derived exceptions instead of std ones, thanks yrs90.
2008-06-26  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/tablewriter.hxx:
  - Peephole optimization, thanks Daniel Frey.
2008-06-22  Jeroen T. Vermeulen <jtv@xs4all.nl>
 test/unit/test_simultaneous_transactions.cxx:
  - Added test against being allowed to have two nontransactions open.
2008-06-21  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/compiler-internal.hxx, src/pipeline.cxx, test/test085.cxx:
  - Re-did workaround for missing std::distance() in safer way.
2008-06-20  Jeroen T. Vermeulen <jtv@xs4all.nl>
 autogen.sh:
  - Don't force LC_ALL=C; breaks on Solaris, thanks Bjorn Munch & Geir Green.
2008-06-18  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/result.hxx:
  - Make streaming operator act on basic_ostream, thanks Richard B. Kreckel
  - Should resolve ambiguity error, sorry Carlos Moreno!
2008-06-15  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx.pipeline.hxx, src/pipeline.cxx:
  - Auto-detach after complete() or flush().
 test/unit/Makefile.am.template:
  - Added new pipeline unit test.
 test/unit/test_pipeline.cxx:
  - Added
  - Test detaching of pipeline after complete() or flush().
2008-06-14  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/basic_connection, include/pqxx/basic_connection.hxx,
 include/pqxx/binarystring, include/pqxx/binarystring.hxx,
 include/pqxx/connection, include/pqxx/connection.hxx,
 include/pqxx/connection_base, include/pqxx/connection_base.hxx,
 include/pqxx/connectionpolicy, include/pqxx/connectionpolicy.hxx,
 include/pqxx/cursor, include/pqxx/cursor.hxx,
 include/pqq/dbtransaction, include/pqq/dbtransaction.hxx,